Fix alignment

--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,7 @@ footer {
 
 /* === Media for Small devices === */
 @media screen and (min-width: 768px) {
-  body {
+  .content {
     background-color: #fff;
   }
 
